<resources>
    <string name="app_name">plWordNet GO!</string>
    <string name="preference_file_key" translatable="false">com.pwr.bzapps.plwordnetmobile</string>
    <string name="main_title">PLWORDNET</string>
    <string name="wordnet">WORDNET</string>
    <string name="sub_title">a large network of words</string>
    <string name="recent_searches">Recent searches</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="popular_searches">Popular searches</string>
    <string name="change_language">Change language</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="faq">FAQ</string>
        <string name="lang_eng">English</string>
        <string name="lang_pol">Polish</string>
    <string name="search_text_edit">Type a word...</string>
    <string name="thanks_to">Project is developed\n thanks to:</string>
    <string name="copyright_wordnet" translatable="false">Copyright © 2006-2018 Wrocław University of Technology\nEnglish data comes from Princeton Wordnet 3.1 (© 2014 The Trustees of Princeton University)\nDuring the works on the mapping between plWordNet and Princeton WordNet 3.1 the Polish-English dictionary of TiP Ltd. was used following the TiP kind consent.\nLogo design: Merhab Studio</string>
    <string name="words_count">words</string>
    <string name="word_senses_count">word senses</string>
    <string name="relations_count">relations</string>
    <string name="polish_english_entries_count">Polish-English entries</string>
    <string name="units_with_emotional_annotations_count">units with emotional annotation</string>
    <string name="free_licence">free licence</string>
    <string name="largest_wordnet_in_the_world">the largest wordnet in the world</string>
    <string name="words_count_value" translatable="false">191 000</string>
    <string name="word_senses_count_value" translatable="false">285 000</string>
    <string name="relations_count_value" translatable="false">600 000</string>
    <string name="polish_english_entries_count_value" translatable="false">239 000</string>
    <string name="units_with_emotional_annotations_count_value" translatable="false">80 000</string>
    <string name="nekst" translatable="false"><a href="https://nekst.ipipan.waw.pl/">NEKST</a></string>
    <string name="unknown" translatable="false">unknown</string>
    <string name="polish" translatable="false">polski</string>
    <string name="english" translatable="false">english</string>
    <string name="verb">Verb</string>
    <string name="noun">Noun</string>
    <string name="adverb">Adverb</string>
    <string name="adjective">Adjective</string>
    <string name="no_connection">No connection to database</string>
    <string name="no_local_database_installed">No local database installed</string>
    <string name="no_results">No results found</string>
    <string name="searching">Searching</string>
    <string name="no_bookmarks">No bookmarks has been added yet</string>
    <string name="no_history">No searches has been stored yet</string>
    <string name="domain">DOMAIN</string>
    <string name="part_of_speech">PART OF SPEECH</string>
    <string name="lexicon">LEXICON</string>
    <string name="examples">EXAMPLES</string>
    <string name="synonyms">SYNONYMS</string>
    <string name="source">SOURCE</string>
    <string name="hypernyms">HYPERNYMS</string>
    <string name="graph">GRAPH</string>
    <string name="emotional_annotation">Emotional annotations</string>
    <string name="team">TEAM</string>
    <string name="leader_label">Leader</string>
    <string name="coordinators_label">Coordinators</string>
    <string name="consultants_label">Consultants</string>
    <string name="linguists_label">Linguists</string>
    <string name="developers_label">Developers</string>
    <string name="mobile_developers_label">\'plWordNet GO!\' developers</string>
    <string name="leader_names" translatable="false">Maciej Piasecki</string>
    <string name="coordinators_names" translatable="false">Agnieszka Dziob
        (2016 - obecnie)
        \nEwa Rudnicka
        (2012 - obecnie)
        \nMagdalena Derwojedowa
        (2006 - 2009)
        \nBożena Hojka
        (2010 - 2011)
        \nMarek Maziarz
        (2010 - 2016)
        \nJoanna Rabiega-Wiśniewska
        (2009 - 2010)
        \nMagdalena Zawisławska
        (2006 - 2009)
    </string>
    <string name="consultants_names" translatable="false">Stanisław Szpakowicz
        \nTadeusz Piotrowski</string>
    <string name="linguists_names" translatable="false">Kinga Banderowicz
        \nMagdalena Bańka-Kowalczyk
        \nJan Bieda
        \nAmelia Biegalska
        \nJoanna Bilińska
        \nMarta Błaszczak
        \nMarta Dobrowolska-Pigoń
        \nElżbieta Filipczuk
        \nMaria Głąbska
        \nEwa Gwiazdecka
        \nKatarzyna Hołojda
        \nAmelia Kiełbawska
        \nDorota Lewandowska
        \nJustyna Wieczorek
        \nPaulina Łazarewicz
        \nNatalia Kaśków
        \nJan Klajn
        \nKatarzyna Klajn
        \nMałgorzata Kościelniak
        \nKatarzyna Kowol
        \nPatrycja Krysiak
        \nKamil Kurpiel
        \nJadwiga Maksym
        \nJustyna Markowicz
        \nKacper Paszke
        \nAleksandra Pawlikowska
        \nNatalia Podbielska
        \nKatarzyna Podlaska
        \nMarek Pustowaruk
        \nAnna Romańska
        \nKamila Rozenek
        \nUrszula Rezler
        \nMałgorzata Skibińska
        \nJakub Skurtys-Idczak
        \nJoanna Stankiewicz
        \nTomasz Stępień
        \nJan Wieczorek
        \nJoanna Wieczorek
        \nWojciech Witkowski
        \nBeata Wójtowicz
        \nMałgorzata Ohia-Nowak
        \nPaweł Nowak
        \nAnna Łach
        \nAnna Śliwicka
        \nKamila Wojda
        \nAleksander Wiśniowski</string>
    <string name="developers_names" translatable="false">Łukasz Biłeńkij
        \nJacek Bochenek
        \nBartosz Broda
        \nŁukasz Burdka
        \nŁukasz Jastrzębski
        \nMichał Kaliński
        \nPaweł Kędzia
        \nJan Kocoń
        \nPaweł Koczan
        \nRoman Kurc
        \nMichał Marcińczuk
        \nWojciech Mazur
        \nAdam Musiał
        \nAdam Pawlaczek
        \nMaciej Piasecki
        \nMarcin Ptak
        \nAdam Radziszewski
        \nRadosław Ramocki
        \nBłażej Ryśnik
        \nMichał Stanek
        \nAdam Stankiewicz
        \nTomasz Śniatowski
        \nTomasz Naskręt
        \nWojciech Rauk
        \nRoman Dyszlewski</string>
    <string name="mobile_developers_names" translatable="false">Karolina Bill
        \nJakub Zdanowicz</string>
    <string name="q_what_is_wordnet">What is plWordNet?</string>
    <string name="a_what_is_wordnet">plWordNet is a relational lexico-semantic dictionary which reflects the lexical system of the Polish language. plWN currently contains 191 000 nouns, verbs, adjectives, and adverbs, 285 000 word senses, and over 600 000 relations. It is now the largest wordnet in the world and is still growing.</string>
    <string name="q_what_is_thisapp">What is \'plWordNet GO!\'?</string>
    <string name="a_what_is_thisapp">This specialized mobile application provides access to plWordNet contents, allowing to search senses for words and browse through its relations, while being online and offline. Also provides special graph visualization of wordnet relations (only online), which until this moment was only available through plWordNet desktop and web applications.</string>
    <string name="q_what_for">What can I use it for?</string>
    <string name="a_what_for">Among plWordNet\'s numerous applications there is its use as a Polish-English and English-Polish dictionary -- the effect of mapping onto Princeton WordNet (the first and for many years the largest wordnet in the world). plWordNet is also an important resource in natural language processing and in artificial intelligence research. For example, it is used by Google Translate for the purpose of machine translation.</string>
    <string name="ambiguous">Ambiguous</string>
    <string name="weak_negative">Weak negative</string>
    <string name="strong_negative">Strong negative</string>
    <string name="weak_positive">Weak positive</string>
    <string name="strong_positive">Strong positive</string>
    <string name="polarity_emo">POLARITY</string>
    <string name="emotions_emo">EMOTIONS</string>
    <string name="valuations_emo">VALUATIONS</string>
    <string name="examples_emo">EXAMPLES</string>
    <string name="other_senses">Other senses</string>
    <string name="graph_view">View graph</string>
    <string name="search">Search</string>
    <string name="connection_required">Connection required</string>
    <string name="connection_required_reason">Internet connection is required to browse graph structure, please switch to online mode in settings panel.</string>
    <string name="offline_mode">Offline mode</string>
    <string name="local_database">Local database</string>
    <string name="visual">Visual settings</string>
    <string name="history_and_bookmarks">History and bookmarks</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_bookmarks">Clear bookmarks</string>
    <string name="clear_history_toast">Whole history has been removed</string>
    <string name="clear_bookmarks_toast">All bookmarks has been removed</string>
    <string name="select_local_dictionaries">Select local dictionaries:</string>
    <string name="dictionary_polish">Polish</string>
    <string name="dictionary_english">English</string>
    <string name="sync_db">Synchronize databases</string>
    <string name="status_db">Status: </string>
    <string name="status_up_to_date">Up to date</string>
    <string name="status_needs_update">Needs update</string>
    <string name="status_no_local_db">No local database available</string>
    <string name="status_checking">Checking...</string>
    <string name="status_synchronizing">Synchronizing</string>
    <string name="status_connection_problem">Connection problem</string>
    <string name="remove_local_db">Remove local database</string>
    <string name="remove_local_db_toast">Local database has been removed</string>
    <string name="sync_please_wait">Synchronizing, please wait...</string>
    <string name="no_db_selected">No dictionary selected</string>
    <string name="requires_permissions">Action aborted because it requires read and write permissions</string>
    <string name="acquired_permissions">Permissions acquired, please synchronize again</string>
    <string name="unavailable_in_online">Unavailable in online mode</string>
    <string name="als_1">verb</string>
    <string name="als_2">noun</string>
    <string name="als_3">adverb</string>
    <string name="als_4">adjective</string>
    <string name="als_5">h. hierarchy</string>
    <string name="als_6">the highest in the hierarchy</string>
    <string name="als_7">activity</string>
    <string name="als_8">activity</string>
    <string name="als_9">artefact</string>
    <string name="als_10">artefact</string>
    <string name="als_11">property</string>
    <string name="als_12">property</string>
    <string name="als_13">body part</string>
    <string name="als_14">body part</string>
    <string name="als_15">thinking</string>
    <string name="als_16">thinking</string>
    <string name="als_17">communication</string>
    <string name="als_18">communication</string>
    <string name="als_19">event</string>
    <string name="als_20">event</string>
    <string name="als_21">emotion</string>
    <string name="als_22">emotion</string>
    <string name="als_23">food</string>
    <string name="als_24">food</string>
    <string name="als_25">group</string>
    <string name="als_26">group</string>
    <string name="als_27">location</string>
    <string name="als_28">location</string>
    <string name="als_29">purpose</string>
    <string name="als_30">purpose</string>
</resources>