<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recent_searches"
            android:icon="@drawable/ic_one"
            android:title="@string/recent_searches" />
        <item
            android:id="@+id/nav_change_language"
            android:icon="@drawable/ic_two"
            android:title="@string/change_language" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />
    </group>
</menu>