<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/top_view"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:id="@+id/back_menu_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true">
            <ImageView
                android:id="@+id/toolbar_app_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/wordnet_logo_remastered" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_below="@id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
             android:id="@+id/content"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/team_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team"
                    android:gravity="center"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorMainText"
            />
            <TextView
                    android:id="@+id/leader_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/leader_label"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorMainText"
            />
            <TextView
                    android:id="@+id/leader_names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/leader_names"
                    android:textSize="16dp"
                    android:textColor="@color/colorMainText"
            />
            <TextView
                    android:id="@+id/coordinators_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/coordinators_label"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorMainText"
            />
            <TextView
                    android:id="@+id/coordinators_names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/coordinators_names"
                    android:textSize="16dp"
                    android:textColor="@color/colorMainText"
            />
            <TextView
                    android:id="@+id/consultants_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/consultants_label"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorMainText"
            />
            <TextView
                    android:id="@+id/consultants_names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/consultants_names"
                    android:textSize="16dp"
                    android:textColor="@color/colorMainText"
            />
            <TextView
                    android:id="@+id/linguists_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/linguists_label"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorMainText"
            />
            <TextView
                    android:id="@+id/linguists_names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/linguists_names"
                    android:textSize="16dp"
                    android:textColor="@color/colorMainText"
            />
            <TextView
                    android:id="@+id/developers_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/developers_label"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorMainText"
            />
            <TextView
                    android:id="@+id/developers_names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/developers_names"
                    android:textSize="16dp"
                    android:textColor="@color/colorMainText"
            />
            <TextView
                    android:id="@+id/mobile_developers_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/mobile_developers_label"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorMainText"
            />
            <TextView
                    android:id="@+id/mobile_developers_names"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/mobile_developers_names"
                    android:textSize="16dp"
                    android:textColor="@color/colorMainText"
            />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>