<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/top_view"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:id="@+id/back_menu_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true">
            <ImageView
                android:id="@+id/toolbar_app_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/wordnet_logo_remastered" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_below="@id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <RelativeLayout
                    android:id="@+id/q_what_is_wordnet_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorFAQQuestionBackground">
                    <TextView
                            android:id="@+id/q_what_is_wordnet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/q_what_is_wordnet"
                            android:textSize="20dp"
                            android:textColor="@color/colorMainText"
                            android:textStyle="bold"
                    />
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/a_what_is_wordnet_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                <TextView
                        android:id="@+id/a_what_is_wordnet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/a_what_is_wordnet"
                        android:textSize="18dp"
                        android:textColor="@color/colorMainText"
                />
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/q_what_is_thisapp_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorFAQQuestionBackground">
                <TextView
                        android:id="@+id/q_what_is_thisapp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/q_what_is_thisapp"
                        android:textSize="20dp"
                        android:textColor="@color/colorMainText"
                        android:textStyle="bold"
                />
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/a_what_is_thisapp_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                <TextView
                        android:id="@+id/a_what_is_thisapp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/a_what_is_thisapp"
                        android:textSize="18dp"
                        android:textColor="@color/colorMainText"
                />
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/q_what_for_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorFAQQuestionBackground">
                <TextView
                        android:id="@+id/q_what_for"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/q_what_for"
                        android:textSize="20dp"
                        android:textColor="@color/colorMainText"
                        android:textStyle="bold"
                />
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/a_what_for_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">
                <TextView
                        android:id="@+id/a_what_for"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/a_what_for"
                        android:textSize="18dp"
                        android:textColor="@color/colorMainText"
                />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>